# NeuralNetwork

./: .gitignore  CMakeLists.txt
include/: layer.h  neural_network.h  neuron.h
src/: layer.cc  main.cc  neural_network.cc  neuron.cc
